# weather-data-pipeline

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml  test_import.py
airflow/dags/: orchestrator.py
api-request/: api_request.py  insert_records.py  main.py  pyproject.toml
api-request/src/: api_request.py  insert_records.py
api-request/src/api_request.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dbt/: .user.yml  profiles.yml
dbt/my_project/models/mart/: daily_avg.sql  weather_report.sql
dbt/my_project/models/sources/: sources.yml
dbt/my_project/models/staging/: stg_weather_data.sql
docker/: superset_config.py
